# Abstracted-GL

./: .gitignore  AbstractedGL.sln  CMakeLists.txt  CMakePresets.json  README.md
Abstracted Editor/: Abstracted Editor.cpp  Abstracted Editor.vcxproj  Abstracted Editor.vcxproj.filters
Abstracted Editor/include/: editor.hpp  scene-layer.hpp
Abstracted Editor/lib/debug/: zlibstaticd.lib
Abstracted Editor/lib/release/: IrrXML.lib
Abstracted Editor/resource/: basic-2d-fragment.glsl  basic-2d-vertex.glsl  basic-vertex.glsl  basic.fsh  light.fsh  light.vsh  text-fragment.glsl  text-vertex.glsl
Abstracted Editor/src/: editor.cpp  scene-layer.cpp
AbstractedGL/: .gitignore  AbstractedGL.sln  AbstractedGL.vcxproj  AbstractedGL.vcxproj.filters  core-error-list.hpp  core.cpp  core.hpp  log.cpp  log.hpp  main.cpp  resource.h  shape.hpp
AbstractedGL/include/agl/core/: event-types.hpp  event.hpp
AbstractedGL/include/agl/utility/: benchmark.hpp  inheritable-vector.hpp  inheritable-vector.inl  ordered-list.hpp  ordered-list.inl  sorted-vector.hpp  static-unique-identifier.hpp  tuple-buffer-base.hpp  tuple-buffer-base.inl  tuple-buffer.hpp  tuple-buffer.inl  type-unique-identifier.hpp  type-unique-identifier.inl  unique-identifier-manager.hpp  unique-identifier.hpp  unique-identifier.inl
AbstractedGL/lib/debug/: IrrXMLd.lib  freetype.lib  glfw3.lib
AbstractedGL/lib/release/: freetype.lib  glfw3.lib  zlibstatic.lib
AbstractedGL/resource/: basic.fsh  basic.vsh  light.fsh  light.vsh
AbstractedGL/source/: main.cpp
AbstractedGL/source/Graphic/: buffer-base.cpp  buffer-base.hpp  camera-base.cpp  camera-base.hpp  camera-orthographic.cpp  camera-orthographic.hpp  camera-perspective.cpp  camera-perspective.hpp  default-agl-shaders.cpp  default-agl-shaders.hpp  directional-light-data.cpp  directional-light-data.hpp  directional-light-uniform.cpp  directional-light-uniform.hpp  drawable.hpp  index-buffer.cpp  index-buffer.hpp  light-point-entry.cpp  light-point-entry.hpp  light-source-data.cpp  light-source-data.hpp  light-source.hpp  light.hpp  light.inl  material-data.cpp  mesh-template.hpp  mesh-template.inl  mesh.cpp  mesh.hpp  mesh.inl  model-template.hpp  model-template.inl  model.cpp  model.hpp  point-light-data.hpp  renderer.cpp  renderer.hpp  shader-data.hpp  shader-entry-manager.cpp  shader-entry-manager.hpp  (+64 more)
AbstractedGL/source/System/: assert.hpp  assimp-importers.cpp  assimp-importers.hpp  assimp-loader.cpp  assimp-loader.hpp  core-error-codes.hpp  core.cpp  core.hpp  debug.cpp  debug.hpp  destructive-move.cpp  destructive-move.hpp  error-code.hpp  error.hpp  event-static-queue.cpp  event-static-queue.hpp  event-types.hpp  event.hpp  exception.cpp  exception.hpp  gl-core.cpp  gl-core.hpp  gl-object.cpp  gl-object.hpp  glfw-init.cpp  glfw-init.hpp  inheritable-vector.hpp  inheritable-vector.inl  loader.hpp  loader.inl  log.cpp  log.hpp  log.inl  move-only.cpp  move-only.hpp  tuple-buffer-base.hpp  tuple-buffer-base.inl  tuple-buffer.hpp  tuple-buffer.inl  unique-identifier.hpp  (+1 more)
AbstractedGL/src/core/app/: application.cpp  entry-point.cpp  input.cpp  layer-base.cpp  layer-manager.cpp  resource.cpp  window.cpp
AbstractedGL/src/core/misc/: log.cpp  timer.cpp  timestep.cpp
AbstractedGL/src/graphics/ecs/: agl-system-order.cpp
AbstractedGL/src/graphics/render/: index-buffer.cpp  render-buffer.cpp  vertex-array.cpp  vertex-buffer.cpp  vertex-layout.cpp
AbstractedGL/src/graphics/shader/: shader-manager.cpp  shader-program.cpp  shader-sub-program.cpp  uniform-array.cpp  uniform-base.cpp  uniform-group.cpp  uniform-prototyper.cpp  uniform-wrapper.cpp
AbstractedGL/src/graphics/shape/: prism.cpp  rectangle.cpp  shape-builder.cpp
AbstractedGL/src/graphics/text/: font-manager.cpp  font.cpp
AbstractedGL/src/graphics/texture/: texture-atlas.cpp  texture-base.cpp  texture-manager.cpp  texture2d.cpp
AbstractedGL/src/graphics/types/: color.cpp
AbstractedGL/src/system/debug/: exceptions.cpp
AbstractedGL/src/system/glcore/: destructive-move.cpp  gl-core.cpp  gl-object.cpp
AbstractedGL/src/utility/: type-unique-identifier.cpp  unique-identifier-manager.cpp
AbstractedGL/src/utility/ecs/: entity.cpp  group-base.cpp  registry-component.cpp  registry-entity.cpp  registry-system.cpp  registry.cpp  signature.cpp  system-base.cpp
agl/include/agl/core/: event.hpp
agl/src/core/app/: application.cpp  window.cpp
agl/src/graphics/render/: render-buffer.cpp  vertex-layout.cpp
agl/src/graphics/shader/: shader-program.cpp  uniform-array.cpp  uniform-base.cpp
agl/src/graphics/texture/: texture-base.cpp
agl/src/system/glcore/: destructive-move.cpp  gl-core.cpp
debug/: debug-d.lib  debug.vcxproj  debug.vcxproj.filters
debug/include/agl/debug/: assert.hpp  error.hpp  exceptions.hpp
debug/src/debug/: exceptions.cpp
ecs/: ecs-d.lib  ecs.vcxproj  ecs.vcxproj.filters
ecs/include/agl/ecs/: component-array-base.cpp  component-array-base.hpp  component-array.hpp  component-array.inl  component-type-uid.hpp  config.hpp  ecs.hpp  entity-uid.hpp  entity.hpp  entity.inl  group-base.hpp  group-type-uid.hpp  group.hpp  ordered-list.hpp  ordered-list.inl  registry-component.hpp  registry-component.inl  registry-entity.hpp  registry-entity.inl  registry-system.hpp  registry-system.inl  registry.hpp  registry.inl  signal.hpp  signal.inl  signature.hpp  signature.inl  view.hpp  (+4 more)
ecs/src/ecs/: entity.cpp  group-base.cpp  registry-component.cpp  registry-entity.cpp  registry-system.cpp  registry.cpp  signature.cpp  system-base.cpp
editor/include/: editor.hpp
editor/resource/: basic-fragment.glsl  text-fragment.glsl
editor/src/: scene-layer.cpp
logger/: logger-d.lib  logger.vcxproj  logger.vcxproj.filters
logger/src/logger/: log.cpp
profiler/include/agl/: profiler.hpp
profiler/src/: profiler.cpp
profiler/src/profiler/: profiler.hpp
tmp/: directional-light-data.hpp  material-data.hpp  point-light-data.cpp  point-light-data.hpp
uid/: uid-d.lib  uid.vcxproj  uid.vcxproj.filters
uid/src/: type-unique-identifier.cpp  unique-identifier-manager.cpp
uid/x64Debug/: uid.idb
(+279 files in other folders)
